k8s/frigate/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: frigate
  labels:
    app: frigate
    kubernetes.io/name: "frigate"
spec:
  type: NodePort
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
      nodePort: 30022
    - name: "8554"
      port: 8554
      targetPort: 8554
    - name: "8555"
      port: 8555
      targetPort: 8555
    - name: "8555-udp"
      port: 8555
      protocol: UDP
      targetPort: 8555
  selector:
    app: frigate
